608867: Add Interfaces and Repositories

--- a/AquaPlayground.Backend/AquaPlayground.Backend.Web/appsettings.json
+++ b/AquaPlayground.Backend/AquaPlayground.Backend.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Diplom": "Server=(localdb)\\MSSQLLocalDB;Database=AquaPlayground;Trusted_Connection=True;"
+    "AquaPlayground": "Server=(localdb)\\MSSQLLocalDB;Database=AquaPlayground;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
