619418: Add registration and login

--- a/AquaPlayground.Backend/AquaPlayground.Backend.Web/appsettings.json
+++ b/AquaPlayground.Backend/AquaPlayground.Backend.Web/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "AquaPlayground": "Server=(localdb)\\MSSQLLocalDB;Database=AquaPlayground;Trusted_Connection=True;"
   },
+  "Jwt": {
+    "Issuer": "AquaPlayground",
+    "lifetime": 15
+  },
   "AllowedHosts": "*"
 }
