--- a/AquaPlayground.Backend/AquaPlayground.Backend.Web/AquaPlayground.Backend.Web.csproj
+++ b/AquaPlayground.Backend/AquaPlayground.Backend.Web/AquaPlayground.Backend.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
@@ -22,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AquaPlayground.Backend.BuisnessLayer\AquaPlayground.Backend.BuisnessLayer.csproj" />
     <ProjectReference Include="..\AquaPlayground.Backend.DataLayer\AquaPlayground.Backend.DataLayer.csproj" />
   </ItemGroup>
 
