622912: Add Service CRUD feature

--- a/AquaPlayground.Backend/AquaPlayground.Backend.BuisnessLayer/AquaPlayground.Backend.BuisnessLayer.csproj
+++ b/AquaPlayground.Backend/AquaPlayground.Backend.BuisnessLayer/AquaPlayground.Backend.BuisnessLayer.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AquaPlayground.Backend.Common\AquaPlayground.Backend.Common.csproj" />
+    <ProjectReference Include="..\AquaPlayground.Backend.DataLayer\AquaPlayground.Backend.DataLayer.csproj" />
   </ItemGroup>
 
 </Project>
